[package]
name = "flashbot-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.0", default-features = false }
ethers-flashbots = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
url = { version = "2.3.1", default-features = false }
serde = "1"
serde_json = "1"
eyre = "0.6"
anyhow = "1.0"
dotenv = "0.15"